fixed clang++ for linux
Signed-off-by: Leonardo de Moura <leonardo@microsoft.com>

--- a/configure.ac
+++ b/configure.ac
@@ -134,7 +134,8 @@ AS_IF([test "$host_os" = "Darwin"], [
 ], [test "$host_os" = "Linux"], [
   PLATFORM=linux
   SO_EXT=.so
-  SLIBFLAGS+="-shared"
+  LDFLAGS+=" -lrt"
+  SLIBFLAGS+=" -shared"
   COMP_VERSIONS=
   STATIC_FLAGS=-static
   CXXFLAGS+=" -fno-strict-aliasing"
