Managed API: Refactoring and formatting.
Signed-off-by: Christoph M. Wintersteiger <cwinter@microsoft.com>

--- a/src/api/dotnet/Microsoft.Z3.csproj
+++ b/src/api/dotnet/Microsoft.Z3.csproj
@@ -258,29 +258,56 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlgebraicNum.cs" />
     <Compile Include="ApplyResult.cs" />
+    <Compile Include="ArithExpr.cs" />
+    <Compile Include="ArithSort.cs" />
+    <Compile Include="ArrayExpr.cs" />
+    <Compile Include="ArraySort.cs" />
     <Compile Include="AST.cs" />
     <Compile Include="ASTMap.cs" />
     <Compile Include="ASTVector.cs" />
+    <Compile Include="BitVecExpr.cs" />
+    <Compile Include="BitVecNum.cs" />
+    <Compile Include="BitVecSort.cs" />
+    <Compile Include="BoolExpr.cs" />
+    <Compile Include="BoolSort.cs" />
     <Compile Include="Constructor.cs" />
-    <Compile Include="DecRefQueue.cs" />
+    <Compile Include="ConstructorList.cs" />
+    <Compile Include="DatatypeExpr.cs" />
+    <Compile Include="DatatypeSort.cs" />
+    <Compile Include="IDecRefQueue.cs" />
     <Compile Include="Enumerations.cs" />
+    <Compile Include="EnumSort.cs" />
     <Compile Include="Expr.cs" />
+    <Compile Include="FiniteDomainSort.cs" />
     <Compile Include="Fixedpoint.cs" />
     <Compile Include="FuncDecl.cs" />
     <Compile Include="FuncInterp.cs" />
     <Compile Include="Goal.cs" />
+    <Compile Include="IntExpr.cs" />
+    <Compile Include="IntNum.cs" />
+    <Compile Include="IntSort.cs" />
+    <Compile Include="IntSymbol.cs" />
+    <Compile Include="ListSort.cs" />
     <Compile Include="Model.cs" />
-    <Compile Include="Numeral.cs" />
     <Compile Include="Params.cs" />
     <Compile Include="ParamDescrs.cs" />
     <Compile Include="Pattern.cs" />
+    <Compile Include="RatNum.cs" />
+    <Compile Include="RealExpr.cs" />
+    <Compile Include="RealSort.cs" />
+    <Compile Include="RelationSort.cs" />
+    <Compile Include="SetSort.cs" />
     <Compile Include="Statistics.cs" />
     <Compile Include="Status.cs" />
     <Compile Include="Context.cs" />
     <Compile Include="Probe.cs" />
     <Compile Include="Solver.cs" />
+    <Compile Include="StringSymbol.cs" />
     <Compile Include="Tactic.cs" />
+    <Compile Include="TupleSort.cs" />
+    <Compile Include="UninterpretedSort.cs" />
     <Compile Include="Z3Exception.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Native.cs" />
