--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ src/util/version.h
 src/api/java/Native.cpp
 src/api/java/Native.java
 src/api/java/enumerations/*.java
+
 *.bak
 doc/api
 doc/code
@@ -76,4 +77,6 @@ src/api/ml/z3enums.ml
 src/api/ml/z3.mllib
 src/api/ml/z3_native.c
 src/api/ml/z3_native.ml
+src/api/ml/native.c
+src/api/ml/Z3.ml
 src/api/ml/z3_enums.ml
