--- a/.gitignore
+++ b/.gitignore
@@ -64,9 +64,12 @@ src/util/version.h
 src/api/java/Native.cpp
 src/api/java/Native.java
 src/api/java/enumerations/*.java
+
 *.bak
 doc/api
 doc/code
 src/api/ml/z3_native.c
 src/api/ml/z3_native.ml
+src/api/ml/native.c
+src/api/ml/Z3.ml
 src/api/ml/z3_enums.ml
