--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ callgrind.out.*
 # OCaml generated files
 *.a
 *.cma
+*.cmo
 *.cmi
 *.cmxa
 ocamlz3
@@ -71,5 +72,5 @@ doc/code
 src/api/ml/z3_native.c
 src/api/ml/z3_native.ml
 src/api/ml/native.c
-src/api/ml/Z3.ml
-src/api/ml/z3_enums.ml
+src/api/ml/z3.ml
+src/api/ml/enumerations.ml
