ML API temp files added to .gitignore
Signed-off-by: Christoph M. Wintersteiger <cwinter@microsoft.com>

--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,6 @@ src/util/version.h
 src/api/java/Native.cpp
 src/api/java/Native.java
 src/api/java/enumerations/*.java
-
 *.bak
 doc/api
 doc/code
@@ -74,3 +73,7 @@ src/api/ml/z3_native.ml
 src/api/ml/native.c
 src/api/ml/z3.ml
 src/api/ml/enumerations.ml
+src/api/ml/z3native.c
+src/api/ml/z3native.ml
+src/api/ml/z3enums.ml
+src/api/ml/z3.mllib
