New ML API savepoint.
Signed-off-by: Christoph M. Wintersteiger <cwinter@microsoft.com>

--- a/src/api/ml/Makefile
+++ b/src/api/ml/Makefile
@@ -4,3 +4,7 @@
 
 all: 
 	ocamlbuild -cflag -annot z3.cmxa
+
+doc: *.ml
+	mkdir -p doc
+	ocamldoc -html -d doc -I ../../../bld_dbg/api/ml *.ml -hide Z3
