ML API refactoring (z3native.c -> z3native_stubs.c)
Signed-off-by: Christoph M. Wintersteiger <cwinter@microsoft.com>

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ src/api/ml/native.c
 src/api/ml/z3.ml
 src/api/ml/enumerations.ml
 src/api/ml/z3native.c
+src/api/ml/z3native_stubs.c
 src/api/ml/z3native.ml
 src/api/ml/z3enums.ml
 src/api/ml/z3.mllib
