--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *~
 *.pyc
+*.pyo
+# Ignore callgrind files
+callgrind.out.*
 # .hpp files are automatically generated
 *.hpp
 .z3-trace
@@ -42,7 +45,6 @@ bld_rel_x64/*
 # Auto generated files.
 config.log
 config.status
-configure
 install_tactic.cpp
 mem_initializer.cpp
 gparams_register_modules.cpp
@@ -54,6 +56,8 @@ src/api/api_log_macros.cpp
 src/api/dll/api_dll.def
 src/api/dotnet/Enumerations.cs
 src/api/dotnet/Native.cs
+src/api/dotnet/Properties/AssemblyInfo.cs
+src/api/dotnet/Microsoft.Z3.xml
 src/api/python/z3consts.py
 src/api/python/z3core.py
 src/ast/pattern/database.h
@@ -61,21 +65,7 @@ src/util/version.h
 src/api/java/Native.cpp
 src/api/java/Native.java
 src/api/java/enumerations/*.java
-*.bak
-doc/api
-doc/code
-src/api/ml/z3_native.c
-src/api/ml/z3_native.ml
-src/api/ml/native.c
-src/api/ml/z3.ml
-src/api/ml/enumerations.ml
-src/api/ml/z3native.c
 src/api/ml/z3native_stubs.c
 src/api/ml/z3native.ml
 src/api/ml/z3enums.ml
 src/api/ml/z3.mllib
-src/api/ml/z3_native.c
-src/api/ml/z3_native.ml
-src/api/ml/native.c
-src/api/ml/z3.ml
-src/api/ml/enumerations.ml
