--- a/.gitignore
+++ b/.gitignore
@@ -68,4 +68,9 @@ src/api/java/enumerations/*.java
 src/api/ml/z3native_stubs.c
 src/api/ml/z3native.ml
 src/api/ml/z3enums.ml
+src/api/ml/z3native.mli
+src/api/ml/z3enums.mli
 src/api/ml/z3.mllib
+*.bak
+doc/api
+doc/code
