--- a/src/api/ml/META.in
+++ b/src/api/ml/META.in
@@ -5,7 +5,7 @@ requires = "num"
 archive(byte) = "z3ml.cma"
 archive(native) = "z3ml.cmxa"
 archive(byte,plugin) = "z3ml.cma"
-archive(native,plugin) = "z3ml.cmxa"
+archive(native,plugin) = "z3ml.cmxs"
 archive(byte,toploop) = "z3ml.cma"
 archive(native,toploop) = "z3ml.cmxa"
-linkopts = "-cclib -L@PREFIX@/lib -cclib -lz3"
+linkopts = "-cclib @LEXTRA@"
