CMake/CLion support
To use the CLion IDE from Jetbrains, we need to build
Z3 with CMake.  This change adds CMake support to Z3
and allows developement with CLion with minimal effort

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,10 @@ src/api/ml/z3.mllib
 *.bak
 doc/api
 doc/code
+.idea/
+/CMakeLists.txt
+/cmake/bin/*
+/cmake/lib/*
+/cmake/include-dirs.txt
+/cmake/sources-libz3.txt
+/cmake/sources-z3.txt
